--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -13,7 +13,9 @@ security:
         main:
             lazy: true
             provider: app_user_provider
-            custom_authenticator: App\Security\LoginFormAuthenticator
+            custom_authenticator: 
+            - App\Security\LoginFormAuthenticator
+            - App\Security\GoogleAuthenticator
             logout:
                 path: app_logout
                 # where to redirect after logout
