--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -1,8 +1,9 @@
-# config/packages/vich_uploader.yaml
 vich_uploader:
-    db_driver: orm 
+    db_driver: orm
     mappings:
-        product_image:
-            uri_prefix: /images
+        ROOM:
+            uri_prefix: /uploads/images
             upload_destination: '%kernel.project_dir%/public/uploads/images'
-            namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
+            namer: Vich\UploaderBundle\Naming\UniqidNamer
+            delete_on_update: true
+            delete_on_remove: true
