--- a/config/services.yaml
+++ b/config/services.yaml
@@ -8,6 +8,10 @@ parameters:
 
 
 services:
+    App\EventListener\AccessDeniedListener:
+        tags:
+            - { name: kernel.event_subscriber }
+            
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
